Fixed collapsable bordered tables

--- a/less/table-responsive.less
+++ b/less/table-responsive.less
@@ -120,6 +120,9 @@
     dt,
     dd {
         border-left: 1px solid @tableBorder;
+        &.collapse-toggle {
+            border-left: none;
+        }
     }
     // Prevent a double border
     .caption + .thead dl:first-child dt,
